sosc/ParserGrammar.txt
// This file was written by Jonathan Metcalf with help from Matthew Worzala.
// It explains the grammar behind the 🆘 language.

FILE -> [FUNCTION[\n]+]+

FUNCTION -> 📝 NAME FUNC_PARAMS 🔶 BODY 🔶 | 📝 💯 FUNC_PARAMS 🔶 BODY 🔶

FUNC_PARAMS -> EMPTY | NAME | NAME FUNC_PARAMS

BODY -> STATEMENT | [STATEMENT\n]+

STATEMENT -> IF | WHILE | CALL | DECLARE | SET | RETURN | CONTINUE

CONTINUE -> ⏭

IF -> 🤔 🌜EXPRESSION🌛 🔶 BODY 🔶 | 🤔 🌜EXPRESSION🌛 🔶 BODY 🔶 👉 🔶 BODY 🔶

WHILE -> 🔁 🌜EXPRESSION🌛 🔶 BODY 🔶

CALL -> NAME🌜CALL_PARAMS🌛

CALL_PARAMS -> EMPTY | VALUE | VALUE CALL_PARAMS

NAME -> [❔ (non-keyword)]+

DECLARE -> 💲 SET

SET -> NAME 🎞 EXPRESSION

RETURN -> ➡ VALUE

EXPRESSION -> VALUE | EXPRESSION OPERATOR EXPRESSION

OPERATOR -> ◀ | ▶ | ✔‍ | ➕ | ➖ | ✖ | ➗

VALUE -> RAW | NAME

RAW -> [0-9]+ | [0-9]+.[0-9]+ | 🔤[a-zA-Z0-9]🔤
