sosc/src/main/kotlin/Parser.kt
/**`
 * Checks through the list of tokens for syntax and converts it into 🆘🥐 code.
 * Uses the rules found in ParserLanguage.txt
 *
 * @author Jonathan Metcalf
 */
class Parser {

    /**
     * Parses the list of tokens of the file and prints the machine code
     * into the output file.
     *
     * Parses a file based on the following rule:
     * FILE -> [FUNCTION[\n]+]+
     *
     * @author Jonathan Metcalf
     *
     * @param list the list to parse
     */
    fun parseFile(list: MutableList<Token>): String? {
        if (list.isEmpty()) return null

        // Does some cleaning up before it parses it
        val remove = mutableListOf<Token>()

        // Removes all new lines at the beginning
        while (list[0].type == TokenType.NEW_LINE || list[0].type == TokenType.SPACE) {
            list.removeAt(0)
        }

        for (i in 0..list.size - 2) {
            // Removes spaces before new lines or other spaces
            if (list[i].type == TokenType.SPACE && (list[i + 1].type == TokenType.NEW_LINE || list[i + 1].type == TokenType.SPACE))
                remove.add(list[i])
            // Removes excess new lines (if there are two or more in a row)
            if (list[i].type == TokenType.NEW_LINE && list[i + 1].type == TokenType.NEW_LINE)
                remove.add(list[i])
            // Removes new lines before braces, except if it's the end of a statement
            if (i != 0 && list[i - 1].type != TokenType.SPACE && list[i].type == TokenType.NEW_LINE && list[i + 1].type == TokenType.BRACE)
                remove.add(list[i])
        }
        // Removes extra new line at the end
        if (list[list.size - 1].type == TokenType.NEW_LINE) list.removeAt(list.size - 1)
        list.removeAll(remove)

        // Advance to the first function
        var index = list.advanceToNext(TokenType.FUNCTION)
        if (index == -1) return null

        // Try to find the second function
        index = list.advanceToNext(TokenType.FUNCTION, start = index + 1)
        // If it's only one function, just return the statement
        if (index == -1) return "${parseFunction(list.subList(0, list.size))}"

        // Otherwise recursively parse all of the statements
        return "${parseFunction(list.subList(0, index))}\n${parseFile(list.subList(index, list.size))}"
    }

    /**
     * Parses a function based on the following rule:
     * FUNCTION -> 📝 NAME FUNC_PARAMS 🔶 BODY 🔶
     *
     * @author Jonathan Metcalf
     *
     * @param list the list of tokens
     * @return the machine code representation of the function
     */
    private fun parseFunction(list: List<Token>): String? {
        if (list.isEmpty()) return null

        if (list[0].type != TokenType.FUNCTION) return null

        // Gets the name of the function
        var index = list.advanceToNext(TokenType.SPACE, start = 2)
        // Todo check if main below should be the 100 or just "main"
        val name = if (list[2].type == TokenType.MAIN) "main" else parseName(list.subList(2, index))
        index++

        // Gets parameters
        var params = ""
        index = list.advanceSpaceTo(index, TokenType.LEFT_PARENTHESES)
        if (index == -1) return null

        val end = list.advanceToNext(TokenType.RIGHT_PARENTHESES, TokenType.BRACE, start = index)
        if (end <= index) return null

        val test = parseFuncParams(list.subList(index + 1, end))
        if (test != null) params = test

        // If main has parameters, it's wrong
        if (name == "main" && !params.isBlank()) return null

        // Gets body
        val body = parseBody(
            list.subList(
                list.advanceToNext(TokenType.NEW_LINE, start = list.advanceToNext(TokenType.BRACE, start = index)) + 1,
                list.advanceToLast(TokenType.BRACE)
            )
        ) ?: return null
        return "func $name $params\n$body"
    }

    /**
     * Parses a function parameters based on the following rule:
     * FUNC_PARAMS -> EMPTY | NAME | NAME FUNC_PARAMS
     *
     * @author Jonathan Metcalf
     *
     * @param list the list of tokens
     * @return the machine code representation of the parameters
     */
    private fun parseFuncParams(list: List<Token>): String? {
        // If it's empty, there are no parameters
        if (list.isEmpty()) return ""

        // Check to make sure all the tokens are valid
        var index = 0
        for (token in list) {
            var next = list.advanceToNext(TokenType.SPACE, start = index)
            if (next == -1) next = list.size
            if (token.type != TokenType.SPACE && parseName(list.subList(index, next)) == null) return null
            else index = next + 1
            if (next >= list.size) break
        }

        return list.joinToString("")
    }

    /**
     * Parses a body of a function/statement (if applicable) based on the following rule:
     * BODY -> STATEMENT | [STATEMENT\n]+
     *
     * @author Jonathan Metcalf
     *
     * @param list the list of tokens
     * @return the machine code representation of the body
     */
    private fun parseBody(list: List<Token>): String? {
        if (list.isEmpty()) return null

        // If it's only one statement, just return the statement
        val index = list.advanceToNext(TokenType.NEW_LINE)
        if (index == -1) return "${parseStatement(list.subList(0, list.size))}"
        if (index == list.size - 1) return "${parseStatement(list.subList(0, index + 1))}"

        // Otherwise recursively parse all of the statements
        return "${parseStatement(list.subList(0, index + 1))}${parseBody(list.subList(index + 1, list.size))}"
    }

    /**
     * Parses a statement based on the following rule:
     * STATEMENT -> IF | WHILE | CALL | DECLARE | SET | RETURN | CONTINUE
     *
     * @author Jonathan Metcalf
     *
     * @param list the list of tokens
     * @return the machine code representation of the statement
     */
    private fun parseStatement(list: List<Token>): String? {
        if (list.isEmpty()) return null

        // todo figure out how to deal with multiline statements like if/while

        val ifs = parseIf(list)
        if (ifs != null) return ifs

        val whiles = parseWhile(list)
        if (whiles != null) return whiles

        val call = parseCall(list)
        if (call != null) return call

        val declaration = parseDeclaration(list)
        if (declaration != null) return declaration

        val set = parseSet(list as MutableList<Token>)
        if (set != null) return set

        val returns = parseReturn(list)
        if (returns != null) return returns

        val continues = parseContinue(list)
        if (continues != null) return continues

        return ""
    }

    /**
     * Parses an if statement based on the following rule:
     * IF -> 🤔 🌜EXPRESSION🌛 🔶 BODY 🔶 | 🤔 🌜EXPRESSION🌛 🔶 BODY 🔶 👉 🔶 BODY 🔶
     *
     * @author Jonathan Metcalf
     *
     * @param list the list of tokens
     * @return the machine code representation of the if statement
     */
    private fun parseIf(list: List<Token>): String? {
        if (list.isEmpty()) return null

        /*
         func main
        0 loadr 0
        1 loadr 1
        2 call >
        3 if
        4 goto 8
        5 loadr No
        8 call print
        7 exit
        8 loadr Yes
        9 call print
        */

        // todo if statement
        return null
    }

    /**
     * Parses a while loop based on the following rules:
     * WHILE -> 🔁 🌜EXPRESSION🌛 🔶 BODY 🔶
     *
     * @author Jonathan Metcalf
     *
     * @param list the list of tokens
     * @return the machine code representation of the while loop
     */
    private fun parseWhile(list: List<Token>): String? {
        if (list.isEmpty()) return null

        // Should start with a while keyword
        var index = 0
        if (list[index].type != TokenType.WHILE) return null
        index++

        index = list.advanceSpaceTo(index, TokenType.LEFT_PARENTHESES)

        // Should have a left parentheses
        if (list[index].type != TokenType.LEFT_PARENTHESES) return null
        index++

        // Now parse the expression and right parentheses
        val right = list.advanceToNext(TokenType.RIGHT_PARENTHESES, start = index)
        val expression = parseExpression(list.subList(index, right)) ?: return null
        index = right
        if (list[index].type != TokenType.RIGHT_PARENTHESES) return null

        // Finds the next brace with any amount of spaces
        index = list.advanceSpaceTo(index, TokenType.BRACE)
        if (index != -1) index++ else return null

        val body = parseBody(list.subList(index, list.advanceToLast(TokenType.BRACE))) ?: return null

        // todo fix while loop to actually be the machine code representation using goto
        return "${expression}while\n$body"
    }

    /**
     * Parses a method call based on the following rule:
     * CALL -> NAME🌜CALL_PARAMS🌛
     *
     * @author Jonathan Metcalf
     *
     * @param list the list of tokens
     * @return the machine code representation of the list of parameters being loaded
     */
    private fun parseCall(list: List<Token>): String? {
        if (list.isEmpty()) return null

        // Index will be sitting at the left parentheses or space after this
        var index = list.advanceToNext(TokenType.LEFT_PARENTHESES)
        if (index == -1) return null

        // Checks whether name of function is valid
        val name = parseName(list.subList(0, index)) ?: return null

        // Advances index to be definitely at the left parentheses
        index = list.advanceSpaceTo(index, TokenType.LEFT_PARENTHESES)
        if (index == -1) return null

        var params = parseCallParams(list.subList(index + 1, if (list[list.size - 1].type != TokenType.NEW_LINE) list.size - 1 else list.size - 2))
        if (params == null || params == "null") params = ""

        return "${params}call $name\n"
    }

    /**
     * Parses a list of parameters in a method call based on the following rule:
     * CALL_PARAMS -> EMPTY | VALUE | VALUE CALL_PARAMS
     *
     * @author Jonathan Metcalf
     *
     * @param list the list of tokens
     * @return the machine code representation of the list of parameters being loaded
     */
    private fun parseCallParams(list: List<Token>): String? {
        // If list is empty, return empty list
        if (list.isEmpty()) return ""

        // If list has a single value, then return a list containing that one value
        val value = parseValue(list)
        if (value != null) return value

        // If the list has multiple values, recursively check each whether it's a value
        val index = list.advanceToNext(TokenType.SPACE)
        if (index == -1) return null

        return "${parseValue(list.subList(0, index))}${parseCallParams(list.subList(index + 1, list.size))}"
    }

    /**
     * Parses a declaration based on the following rule:
     * DECLARE -> 💲 SET
     *
     * @author Jonathan Metcalf
     *
     * @param list the list of tokens
     * @return the machine code representation of the declaration
     */
    private fun parseDeclaration(list: List<Token>): String? {
        if (list.isEmpty()) return null

        if (list[0].type != TokenType.VAR || list[1].type != TokenType.SPACE) return null

        return parseSet(list.subList(2, list.size) as MutableList<Token>)
    }

    /**
     * Parses a setting based on the following rule:
     * SET -> NAME 🎞 VALUE
     *
     * @author Jonathan Metcalf
     *
     * @param toParse the list of tokens
     * @return the machine code representation of the setting
     */
    private fun parseSet(toParse: MutableList<Token>): String? {
        val list = toParse.filter { it.type != TokenType.SPACE }
        if (list.isEmpty()) return null

        // Index will be sitting at the equals sign after this
        val index = list.advanceToNext(TokenType.EQUALS)
        if (index == -1) return null

        // Check to make sure it is a valid name and value
        val name = parseName(list.subList(0, index))
        val expression = parseExpression(list.subList(index + 1, list.size - 1))
        if (name == null || expression == null) return null

        return "${expression}store ${name}\n"
    }

    /**
     * Parses an expression by the following rule:
     * EXPRESSION -> VALUE | EXPRESSION OPERATOR EXPRESSION
     *
     * @author Jonathan Metcalf
     *
     * @param list the list of tokens
     * @return the machine code representation of the expression
     */
    private fun parseExpression(list: List<Token>): String? {
        if (list.isEmpty()) return null

        val value = parseValue(list)
        if (value != null) return value

        var index = list.size - 1
        // Index is now sitting at the operator
        while (parseOperator(list[index]) == null) {
            if (index == 0) return null
            index--
        }

        val left = parseExpression(list.subList(0, index)) ?: parseValue(list.subList(0, index))
        val operator = parseOperator(list[index])
        val right =
            parseExpression(list.subList(index + 1, list.size)) ?: parseValue(list.subList(index + 1, list.size))

        if (left == null || operator == null || right == null) return null


        return "${left}${right}call ${operator}\n"
    }

    /**
     * Parses an operator by the following rule:
     * OPERATOR -> ◀ | ▶ | ✔ | ➕ | ➖ | ✖ | ➗
     *
     * @author Jonathan Metcalf
     *
     * @param token the single token to be parsed
     * @return the string representation of the operator
     */
    private fun parseOperator(token: Token): String? {
        if (token.type == TokenType.GREATER_THAN) return ">"
        if (token.type == TokenType.LESS_THAN) return "<"
        if (token.type == TokenType.COMPARE) return "=="
        if (token.type == TokenType.PLUS) return "+"
        if (token.type == TokenType.MINUS) return "-"
        if (token.type == TokenType.MULTIPLY) return "*"
        if (token.type == TokenType.DIVIDE) return "/"
        return null
    }

    /**
     * Parses a return by the following rule:
     * RETURN -> ➡ VALUE
     *
     * @author Jonathan Metcalf
     *
     * @param list the list of tokens
     * @return the machine code representation of the return
     */
    private fun parseReturn(list: List<Token>): String? {
        if (list.isEmpty()) return null

        // If the first and second tokens aren't return and space, it is not valid
        if (list[0].type != TokenType.RETURN || list[1].type != TokenType.SPACE) return null

        // If the list from 2-onwards can successfully be parsed into a value, it is valid
        val value = parseValue(list.subList(2, list.nextIndexOf(2, TokenType.SPACE, TokenType.NEW_LINE)))
        if (value != null) {
            return "${value}exit\n"
        }

        // Otherwise, it isn't valid
        return null
    }

    /**
     * Parses a continue by the following rule:
     * CONTINUE -> ⏭
     *
     * @author Jonathan Metcalf
     *
     * @param list the list of tokens
     * @return the machine code representation of continue
     */
    private fun parseContinue(list: List<Token>): String? {
        if (list.isEmpty()) return null

        // todo actually make this work
        return if (list.size == 1 && list[0].type == TokenType.CONTINUE) "continue\n"
        else null
    }

    /**
     * Parses a value by the following rule:
     * VALUE -> RAW | NAME
     *
     * @author Jonathan Metcalf
     *
     * @param list the list of tokens
     * @return the machine code representation of the value
     */
    private fun parseValue(list: List<Token>): String? {
        if (list.isEmpty()) return null

        val name = parseName(list)
        val raw = parseRaw(list)
        if (name != null) return "load $name\n"
        if (raw != null) return "loadr $raw\n"
        return null
    }

    /**
     * Parses a name by the following rule:
     * NAME -> [❔ (non-keyword)]+
     *
     * @param list the list of tokens
     * @return the string representation of the name
     */
    private fun parseName(list: List<Token>): String? {
        if (list.isEmpty()) return null

        // Make sure the name isn't a raw
        for (token in list)
            if (token.type == TokenType.RAW)
                return null

        for (token in list) {
            // If there are spaces, it is not valid
            if (token.type == TokenType.SPACE) return null
            // If there are keywords, it is not valid
            if (TokenType.values().contains(token.type) && token.type != TokenType.UNKNOWN) return null
            // If there is a literal, it is not valid
            if (token.type == TokenType.UNKNOWN && token.raw!!.matches(Regex(TokenType.RAW.unicode!!))) return null
        }
        return list.joinToString("")
    }

    /**
     * Parses a literal of the form int, double, string of the form:
     * RAW -> [0-9]+ | [0-9]+.[0-9]+ | 🔤[a-zA-Z0-9]🔤
     *
     * @author Jonathan Metcalf
     *
     * @param list the list of tokens
     * @return the string representation of the raw
     */
    private fun parseRaw(list: List<Token>): String? {
        if (list.isEmpty()) return null

        // This means it's a string
        for (i in 1 until list.size - 1) {
            if (list[i].type == TokenType.QUOTE_MARK) {
                return null
            }
        }

        if (list[0].type == TokenType.QUOTE_MARK)
            return list.subList(1, list.size - 1).joinToString("")

        // Otherwise, it should only be numbers
        if (list.joinToString("").matches(Regex("[0-9]+|[0-9]+.[0-9]+")))
            return list.joinToString("")

        // Otherwise, it doesn't match anything
        return null
    }
}

/**
 * Finds the first token after a starting index that matches with the list of tokens put in,
 * and returns the index of that first token.
 *
 * @author Jonathan Metcalf
 *
 * @param start the starting index to look for
 * @param types the list of tokens that should stop the search
 * @return the index of the first token found that is contained in types, or -1 if not found
 */
private fun List<Token>.advanceToNext(vararg types: TokenType, start: Int = 0): Int {
    var index = start
    while (!types.contains(this[index].type)) {
        if (index == size - 1) return -1
        index++
    }
    return index
}

/**
 * Finds the first token after a starting index that matches with the list of tokens put in,
 * and returns the index of that first token.
 *
 * In this case, the tokens in between must all be of spaces or new lines.
 *
 * @author Jonathan Metcalf
 *
 * @param start the starting index to look for
 * @param types the list of tokens that should stop the search
 * @return the index of the first token found that is contained in types, or -1 if not found
 */
private fun List<Token>.advanceSpaceTo(start: Int = 0, vararg types: TokenType): Int {
    var index = start
    while (!(types.contains(this[index].type)) && (this[index].type == TokenType.SPACE || this[index].type == TokenType.NEW_LINE)) {
        if (index == this.size - 1) return start + 1
        index++
    }
    return index
}

/**
 * Advances to the last token in the list of the specified type.
 *
 * @param type the type of token
 * @return the index of the last token, or -1 if not found
 */
private fun List<Token>.advanceToLast(type: TokenType): Int {
    var index = -1
    forEachIndexed { i, token ->
        if (token.type == type) {
            index = i
        }
    }
    return index
}

/**
 * Finds the index of any amount of tokens from a certain point onwards.
 *
 * @author Jonathan Metcalf
 *
 * @param start the starting index to look at
 * @param matches the TokenTypes to look for
 * @return the index of the first matching token from that point onwards, or the next index if not found
 *
 * @see TokenType
 * @see List
 */
private fun List<Token>.nextIndexOf(start: Int, vararg matches: TokenType): Int {
    for (i in start until size) {
        if (matches.contains(this[i].type))
            return i
    }
    return start + 1
}
